# extcc

./: Assembly.md  CMakeLists.txt  Doxyfile  Readme.md  assembly.txt  test.sh
clang/: c_flow.cpp  c_func.cpp  c_lex.cpp  c_lex.hh  c_parser.cpp  c_parser.hh  c_struct.cpp  c_var.cpp
clang/test/: c_ast.cpp  c_lex_test.cpp
compiler/: arch.hh  compiler.cpp  compiler.hh  config.hh  main.cpp
compiler/aarch64/: aarch64_flow.cpp  aarch64_func.cpp  aarch64_math.cpp  aarch64_registers.hh  aarch64_syscall.cpp  aarch64_var.cpp  asm_aarch64.cpp  asm_aarch64.hh
compiler/arm7/: arm7_funcs.cpp  arm7_var.cpp  asm_arm7.cpp  asm_arm7.hh  registers.hh
compiler/base/: asm_base.hh  cbase.cpp  cbase.hh
compiler/i386/: asm_i386.cpp  asm_i386.hh
compiler/jvm/: jvm.cpp  jvm.hh
compiler/llvm/: asm_llvm.cpp  asm_llvm.hh
compiler/ltac/arm7/: arm7_funcs.cpp
compiler/ltac/llvm/: asm_llvm.hh  llvm_func.cpp
compiler/ltac/x64/: x64_math.cpp  x64_store.cpp  x64_vector.cpp
compiler/ppc64/: asm_ppc64.cpp  asm_ppc64.hh  ppc64_flow.cpp  ppc64_func.cpp  ppc64_math.cpp  ppc64_registers.hh  ppc64_syscall.cpp  ppc64_var.cpp
compiler/x64/: asm_x64.cpp  asm_x64.hh  registers.hh  x64_array.cpp  x64_funcs.cpp  x64_math.cpp  x64_vars.cpp  x64_vector.cpp
compiler/x86-64/: asm_x64.cpp  asm_x64.hh  x64_flow.cpp  x64_func.cpp  x64_math.cpp  x64_registers.hh  x64_syscall.cpp  x64_var.cpp
doc/html/: annotated.html  ast_8hh_source.html  cbase_8hh_source.html  classAstArrayAcc-members.html  classAstArrayAcc.html  classAstArrayAcc__coll__graph.dot  classAstArrayAcc__coll__graph.md5  classAstArrayAcc__inherit__graph.dot  classAstArrayAcc__inherit__graph.md5  classAstArrayAssign-members.html  classAstArrayAssign.html  classAstArrayAssign__coll__graph.dot  classAstArrayAssign__coll__graph.md5  classAstArrayAssign__inherit__graph.dot  classAstArrayAssign__inherit__graph.md5  classAstArrayDec-members.html  classAstArrayDec.html  classAstArrayDec__coll__graph.dot  classAstArrayDec__coll__graph.md5  classAstArrayDec__inherit__graph.dot  classAstArrayDec__inherit__graph.md5  classAstAttrNode-members.html  classAstAttrNode.html  classAstAttrNode__coll__graph.dot  classAstAttrNode__coll__graph.md5  classAstAttrNode__inherit__graph.dot  classAstAttrNode__inherit__graph.md5  classAstBool-members.html  classAstBool.html  classAstBool__coll__graph.dot  classAstBool__coll__graph.md5  classAstBool__inherit__graph.dot  classAstBool__inherit__graph.md5  classAstChar-members.html  classAstChar.html  classAstChar__coll__graph.dot  classAstChar__coll__graph.md5  classAstChar__inherit__graph.dot  classAstChar__inherit__graph.md5  classAstCond-members.html  (+415 more)
doc/html/search/: all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_8.js  all_9.js  all_b.js  all_c.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_6.js  classes_7.js  classes_a.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  pages_0.js  searchdata.js  variables_0.js
doc/latex/: annotated.tex  classAstArrayAcc.tex  classAstArrayAcc.tex.tmp  classAstArrayAcc__coll__graph.dot  classAstArrayAcc__coll__graph.md5  classAstArrayAcc__inherit__graph.dot  classAstArrayAcc__inherit__graph.md5  classAstArrayAssign.tex  classAstArrayAssign__coll__graph.dot  classAstArrayAssign__coll__graph.md5  classAstArrayAssign__inherit__graph.dot  classAstArrayAssign__inherit__graph.md5  classAstArrayDec.tex  classAstArrayDec__coll__graph.dot  classAstArrayDec__coll__graph.md5  classAstArrayDec__inherit__graph.dot  classAstArrayDec__inherit__graph.md5  classAstAttrNode.tex  classAstAttrNode__coll__graph.dot  classAstAttrNode__coll__graph.md5  classAstAttrNode__inherit__graph.dot  classAstAttrNode__inherit__graph.md5  classAstBool.tex  classAstBool__coll__graph.dot  classAstBool__coll__graph.md5  classAstBool__inherit__graph.dot  classAstBool__inherit__graph.md5  classAstChar.tex  classAstChar__coll__graph.dot  classAstChar__coll__graph.md5  classAstChar__inherit__graph.dot  classAstChar__inherit__graph.md5  classAstCond.tex  classAstCond__coll__graph.dot  classAstCond__coll__graph.md5  classAstCond__inherit__graph.dot  classAstCond__inherit__graph.md5  classAstDouble.tex  classAstDouble__coll__graph.dot  classAstDouble__coll__graph.md5  (+302 more)
examples/: Readme.md
examples/ltac-asm/: array1.asm  double1.asm  float1.asm  hello.asm  imath.asm  int_vector.asm
lasm/: lasm_flow.cpp  lasm_funcs.cpp  lasm_lex.cpp  lasm_lex.hh  lasm_parser.cpp  lasm_parser.hh  lasm_register.cpp  lasm_store.cpp
legacy/: assembly.txt
legacy/examples/: Readme.md
legacy/examples/llvm/: hello.ll  printf1.ll
legacy/examples/ltac-asm/: float1.asm  float32_vector.asm  loop1.asm
legacy/lasm/: lasm_array.cpp  lasm_flow.cpp  lasm_lex.cpp  lasm_parser.cpp  lasm_parser.hh  lasm_register.cpp
legacy/ltac/: ltac.hh  ltac_array.cpp  ltac_func.cpp  ltac_math.cpp  ltac_writer.cpp
parser/: ast.cpp  ast.hh  lex.cpp  lex.hh  parser.cpp  parser.hh  syntax.cpp  syntax.hh  types.hh
parser/ltac/: ltac.cpp  ltac.hh  ltac_array.cpp  ltac_build.cpp  ltac_build.hh  ltac_flow.cpp  ltac_func.cpp  ltac_math.cpp  ltac_struct.cpp  ltac_vars.cpp  ltac_writer.cpp
parser/pasm/: pasm.hh  pasm_builder.cpp  pasm_builder.hh  pasm_flow.cpp  pasm_func.cpp  pasm_math.cpp  pasm_var.cpp  unwriter.cpp
parser/test/: ast_test.cpp  ltac_test.cpp  pasm_test.cpp
quik/: qk_lex.cpp  qk_lex.hh
quik/test/: qk_lex_test.cpp
test/: test-c.sh
test/clang/: array1.c  array2.c  array3.c  array4.c  basic.c  float1.c  for1.c  for2.c  func_ret.c  test001.c  test004.c  test005.c  test006.c  while1.c
test/clang/feature/: array1.c  cmp2.c  while1.c
test/llvm/: hello-world.asm  printf1.asm
test/non-working/: test004.c
test/pasm/: syscall.c
(+7 files in other folders)
